syntax = "proto3";
package wormhole.v1;

message Instructions {
  repeated Instruction instructions = 1;
}
message Instruction {
  string program_id = 1;
  repeated string accounts = 2;
  bytes data = 3;
}

message WormholeMessage {
  string emitter = 1;
  uint64 sequence = 2;
  bytes payload = 3;
}
