syntax = "proto3";

package wormhole_bridge.nft.v1;

message WormholeNFTTransfer {
  string transaction_id = 1;
  string nft_address = 2;
  string nft_chain = 3;
  string recipient_address = 4;
  string target_chain = 5;
  string sender_address = 6;
  uint64 block_time = 7;
  uint64 block_height = 8;
  uint32 sequence_number = 9;
  string nft_name = 10;
  string nft_symbol = 11;
  string nft_uri = 12;
  uint64 token_id = 13;
}

message WormholeNFTTransfers {
  repeated WormholeNFTTransfer transfers = 1;
} 